#
# src/station/CMakeLists.txt
#

set(station_SRC
    src/oskar_apply_element_taper_cosine_cuda.cu
    src/oskar_apply_element_taper_cosine.c
    src/oskar_apply_element_taper_gaussian_cuda.cu
    src/oskar_apply_element_taper_gaussian.c
    src/oskar_blank_below_horizon_cuda.cu
    src/oskar_blank_below_horizon.c
    src/oskar_element_model_copy.c
    src/oskar_element_model_evaluate.cu
    src/oskar_element_model_free.c
    src/oskar_element_model_init.c
    src/oskar_element_model_load_cst.c
    src/oskar_element_model_type.c
    src/oskar_ElementModel.cpp
    src/oskar_evaluate_array_pattern.c
    src/oskar_evaluate_array_pattern_dipoles_cuda.cu
    src/oskar_evaluate_array_pattern_dipoles.c
    src/oskar_evaluate_array_pattern_hierarchical.c
    src/oskar_evaluate_beam_horizontal_lmn.c
    src/oskar_evaluate_dipole_pattern_cuda.cu
    src/oskar_evaluate_dipole_pattern.c
    src/oskar_evaluate_jones_E.c
    src/oskar_evaluate_pierce_points.c
    src/oskar_evaluate_element_weights_dft_cuda.cu
    src/oskar_evaluate_element_weights_dft.c
    src/oskar_evaluate_element_weights_errors_cuda.cu
    src/oskar_evaluate_element_weights_errors.c
    src/oskar_evaluate_element_weights.c
    src/oskar_evaluate_flux_density.c
    src/oskar_evaluate_station_beam_aperture_array.c
    src/oskar_evaluate_station_beam_gaussian.c
    src/oskar_evaluate_station_from_telescope_dipole_azimuth.c
    src/oskar_evaluate_source_horizontal_lmn.c
    src/oskar_station_model_analyse.c
    src/oskar_station_model_copy.c
    src/oskar_station_model_different.c
    src/oskar_station_model_free.c
    src/oskar_station_model_init_child_stations.c
    src/oskar_station_model_init.c
    src/oskar_station_model_load_config.c
    src/oskar_station_model_location.c
    src/oskar_station_model_multiply_by_wavenumber.c
    src/oskar_station_model_override_element_gains.c
    src/oskar_station_model_override_element_orientations.c
    src/oskar_station_model_override_element_phases.c
    src/oskar_station_model_override_element_time_variable_gains.c
    src/oskar_station_model_override_element_time_variable_phases.c
    src/oskar_station_model_override_element_xy_position_errors.c
    src/oskar_station_model_resize_element_types.c
    src/oskar_station_model_resize.c
    src/oskar_station_model_save_config.c
    src/oskar_station_model_scale_coords.c
    src/oskar_station_model_set_element_coords.c
    src/oskar_station_model_set_element_errors.c
    src/oskar_station_model_set_element_orientation.c
    src/oskar_station_model_set_element_weight.c
    src/oskar_station_model_type.c
    src/oskar_StationModel.cpp
    src/oskar_system_noise_model_copy.c
    src/oskar_system_noise_model_free.c
    src/oskar_system_noise_model_init.c
    src/oskar_system_noise_model_load.c
    src/oskar_work_station_beam_free.c
    src/oskar_work_station_beam_init.c
    src/oskar_WorkStationBeam.cpp
)

set(station_SRC "${station_SRC}" PARENT_SCOPE)

# ==== Recurse into test subdirectory.
add_subdirectory(test)
